260212-01-큐레이터픽파트-영화사진반영, css 수정 진행 중

--- a/css/common.css
+++ b/css/common.css
@@ -13,20 +13,23 @@ a {
     text-decoration: none;
 }
 
-img, video {
+img,
+video {
     max-width: 100%;
     vertical-align: middle;
 }
 
-address, em, i {
+address,
+em,
+i {
     font-style: normal;
 }
 
 .blind {
     position: absolute;
-    text-indent: -9999px;
+    top: -9999px;
 }
 
 body {
-    font-family: "Pretendard",sans-serif;
+    font-family: "Pretendard", sans-serif;
 }
