--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,7 @@ section {
 
 .curator-part>.inner {
     padding: 0 10px;
+    position: relative;
 }
 
 .curator-part>.inner>h2 {
@@ -760,16 +761,42 @@ section {
     font-weight: 700;
 }
 
+/* curator-part 화살표 */
+.curator-part .curator-info-wrap {
+    position: relative;
+}
+
+.curator-part .curator-info-arrow .arrow-btn>li>a {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 100;
+}
+
+.curator-part .curator-info-arrow .arrow-btn>.arrow-btn-left>a {
+    left: 12px;
+}
+
+.curator-part .curator-info-arrow .arrow-btn>.arrow-btn-right>a {
+    right: 12px;
+}
+
 /* curator-moive-inner-wrap - 숨김처리 하는 영역*/
+.curator-moive-inner-wrap {
+    /* border: 1px solid rgba(255, 255, 255, 0.55); */
+    margin: 0 72px;
+    overflow: hidden;
+    position: relative;
+}
 
 /* curator-moive-set - 추천영화 리스트 아이템*/
 .curator-moive-set {
     display: flex;
-    gap: 24px;
-    width: calc(100% * 5 / 1.2);
+    gap: 12px;
+    width: calc(100% * 5 / 1.2 - 12px);
 }
 
-/* 추천 리스트 아이템 1번 */
+
 /* curator-moive-item */
 .curator-moive-item {
     display: flex;
@@ -782,13 +809,19 @@ section {
     height: 548px;
     /* aspect-ratio: 385/548; */
     object-fit: cover;
-    border-radius: 12px;
+    padding: 48px;
     overflow: hidden;
+}
+
+/* 추천 리스트 아이템 선택항목 */
+.curator-moive-item.active .curator-moive-poster {
+    padding: 0;
 }
 
 .curator-moive-poster>img {
     width: 100%;
     height: 100%;
+    border-radius: 30px;
 }
 
 /* 추천 리스트 아이템 - 우측영역 세로 정렬 */
@@ -796,7 +829,14 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 12px 0;
+    padding: 36px 0;
+}
+
+/* 추천 리스트 아이템 - 제목 + 한줄평 묶음 영역 */
+.curator-moive-info .curator-moive-title-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
 }
 
 /* 추천 리스트 아이템 - 제목*/
@@ -842,7 +882,8 @@ section {
 .curator-moive-info .plot-info {
     font-size: 1.125em;
     color: #cbcbcb;
-    max-width: 640px;
+    line-height: 1.5;
+    width: 624px;
     max-height: 128px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -872,6 +913,23 @@ section {
     background-color: #da291c;
     font-weight: 700;
 }
+
+/* 추천 영화 광고 영역 */
+
+.curator-ad-item {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    margin-top: 4em;
+}
+
+.curator-ad-item>li {
+    display: block;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+
 
 /* -----------------------upcoming section ---------------------------*/
 /* upcoming section */
