--- a/css/sub-cinema.css
+++ b/css/sub-cinema.css
@@ -106,10 +106,12 @@ header .inner {
 /* main */
 
 .theater-loc {
-    width: 1319px;
+    /* width: 1319px; */
     height: 360px;
-    margin: 81px 0 120px 72px;
-    padding: 44px 0 0 42px;
+    /* height: 100%; */
+    /* margin: 81px 0 120px 72px; */
+    margin: 75px 50px;
+    padding: 50px;
     background: #1f1f1f;
     border-radius: 30px;
 }
@@ -121,11 +123,9 @@ header .inner {
 
 .theater-loc-list {
     display: flex;
-}
-
-.theater-loc-list>li {
     position: relative;
 }
+
 
 .theater-loc-list>li>a {
     padding: 0 12px;
@@ -143,7 +143,9 @@ header .inner {
     position: absolute;
     top: 42px;
     left: 10px;
-    width: 1100px;
+    /* width: 1100px; */
+    width: 100%;
+
 }
 
 .theater-loc-list .theater-list {
@@ -180,6 +182,20 @@ header .inner {
     background-repeat: no-repeat;
     background-position: center 78px;
     overflow: hidden;
+    position: relative;
+}
+
+.theater::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 20%;
+    top: 80px;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.65+100 */
+    background: linear-gradient(to right, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.8) 70%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
 }
 
 .theater .inner {
@@ -211,8 +227,12 @@ header .inner {
 }
 
 .theater-info .theater-name {
-    padding: 100px 0 20px 30px;
-    margin-bottom: 85px;
+    padding: 50px;
+    margin-bottom: 50px;
+}
+
+.theater-info .theater-name .name {
+    padding-bottom: 30px;
 }
 
 .theater-info .theater-name h2 {
@@ -234,9 +254,6 @@ header .inner {
     border-radius: 30px;
 }
 
-.theater-info .theater-name>.name p>a:hover .map {
-    display: block;
-}
 
 .theater-info .theater-name p {
     font-size: 20px;
@@ -295,11 +312,17 @@ header .inner {
     margin-left: 25px;
 }
 
-.theater-info .facilities {
+.facilities-floor-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.facilities-floor-wrap .facilities {
     margin-bottom: 100px;
 }
 
-.theater-info .facilities h3 {
+.facilities-floor-wrap .facilities h3 {
     font-size: 24px;
 }
 
@@ -323,7 +346,7 @@ header .inner {
     font-weight: 500;
 }
 
-.theater-info .floor-info h3 {
+.facilities-floor-wrap .floor-info h3 {
     font-size: 24px;
     margin-bottom: 24px;
 }
@@ -355,31 +378,89 @@ header .inner {
     margin-bottom: 0;
 }
 
-.traffic-info {
+/* .traffic-info {
     margin-bottom: 85px;
 }
 
 .traffic-info .bus {
-    width: 1120px;
-    height: 280px;
+    width: 77%;
+    height: 100%;
     background: var(--div-color);
     border-radius: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 45px;
+    padding: 20px 30px 20px 45px;
+}
+*/
+
+.traffic-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 0 100px;
+    position: relative;
 }
 
-.traffic-info .bus>div {
+.traffic-info .traffic-title {
+    text-align: center;
+    line-height: 300px;
+    font-size: 1.25em;
+}
+
+.traffic-info>div {
+    background: #1f1f1f;
+    border-radius: 30px;
+    width: 23%;
+    /* aspect-ratio: 1/1; */
+}
+
+.traffic-info>.traffic-title {
+    background-color: var(--main-color);
+}
+
+.traffic-info .wrap {
+    position: relative;
+}
+
+.traffic-info .wrap>div {
+    width: 100%;
+    text-align: center;
+    line-height: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.traffic-info .wrap p {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.traffic-info .bus-hover {
+    padding: 44px;
+    /* padding-left: 40px; */
+    position: absolute;
+    top: 50px;
+    left: 25%;
+    width: 50%;
+    z-index: 100;
+    /* aspect-ratio: 1/0.4; */
+    display: none;
+}
+
+.traffic-info .bus-hover>div {
     display: flex;
     gap: 8px;
     align-items: center;
     margin-bottom: 12px;
 }
 
-.traffic-info .bus>div>p {
+.traffic-info .bus-hover>div>p {
     font-size: 24px;
     font-weight: bold;
+    display: none;
 }
 
 .traffic-info .bus-num .jisun {
@@ -401,40 +482,38 @@ header .inner {
     margin-right: 8px;
 }
 
-.bus .traffic-info-list>li {
+.bus-hover .traffic-info-list>li {
     list-style: disc;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 12px;
 }
 
-.bus .traffic-info-list .traffic-info-sub-list>li {
+.bus-hover .traffic-info-list .traffic-info-sub-list>li {
     font-size: 16px;
     font-weight: 400;
 }
 
+/*
 .traffic-info .subway {
-    width: 1120px;
-    height: 130px;
+    width: 77%;
+    height: 100%;
     border-radius: 30px;
-    padding-left: 40px;
+    padding: 40px;
     margin: 12px 0;
     background: var(--div-color);
     display: flex;
     align-items: center;
     gap: 8px;
 }
+*/
 
-.traffic-info .subway p {
-    font-size: 24px;
-    font-weight: bold;
-}
-
+/*
 .traffic-info .car {
-    width: 1120px;
-    height: 130px;
+    width: 77%;
+    height: 100%;
     border-radius: 30px;
-    padding-left: 40px;
+    padding: 40px;
     background: var(--div-color);
     display: flex;
     align-items: center;
@@ -444,7 +523,9 @@ header .inner {
 .traffic-info .car p {
     font-size: 24px;
     font-weight: bold;
-}
+} */
+
+
 
 .special-wrap .inner h2 {
     padding-left: 60px;
@@ -453,20 +534,25 @@ header .inner {
 
 .special-theater {
     overflow: hidden;
-    margin-top: 24px;
-    margin-bottom: 110px;
+    margin: 50px 0;
+    width: 100%;
+    /* margin: 0 auto; */
 }
 
 .special-theater-list {
     display: flex;
     gap: 36px;
+}
+
+.special-theater-list>li {
+    flex: 0 0 calc(100% / 5 - 29px);
 
 }
 
 .special-theater-list>li>a {
     display: block;
-    width: 450px;
-    height: 250px;
+    /* width: 450px;
+    height: 250px; */
 }
 
 .special-theater-list img {
@@ -474,6 +560,7 @@ header .inner {
     height: 100%;
     object-fit: cover;
     border-radius: 30px;
+    aspect-ratio: 1/0.6;
 }
 
 /* footer */
