--- a/css/sub-cinema.css
+++ b/css/sub-cinema.css
@@ -106,10 +106,7 @@ header .inner {
 /* main */
 
 .theater-loc {
-    /* width: 1319px; */
     height: 360px;
-    /* height: 100%; */
-    /* margin: 81px 0 120px 72px; */
     margin: 75px 50px;
     padding: 50px;
     background: #1f1f1f;
@@ -162,7 +159,7 @@ header .inner {
 .theater-loc-list .theater-list>li>a {
     display: block;
     padding: 10px 20px;
-    border: 1px solid #fff;
+    border: 1px solid rgba(250, 250, 250, 0.5);
     border-radius: 10px;
 }
 
