info-list html,css,반응형 수정

--- a/css/style.css
+++ b/css/style.css
@@ -1108,6 +1108,10 @@ section {
     flex-wrap: wrap;
 }
 
+.info-list>li i {
+    display: none;
+}
+
 .info-list>li>img {
     margin-bottom: 12px;
 }
