--- a/css/respond.css
+++ b/css/respond.css
@@ -6,7 +6,7 @@
     .inner {
         overflow: hidden;
     }
-    
+
     .main-menu,
     .gnb-list {
         display: none;
@@ -16,7 +16,7 @@
         position: relative;
         width: 100%;
     }
-    
+
     .ham-btn {
         display: block;
         width: 24px;
@@ -143,7 +143,7 @@
 
 
     /* footer */
-    .footer-top .util-menu{
+    .footer-top .util-menu {
         flex-wrap: wrap;
     }
 
@@ -166,5 +166,25 @@
 
     .footer-bottom .footer-bottom-right .search-wrap-mobile {
         display: block;
+    }
+}
+
+@media screen and (max-width:480px) {
+
+    .info-list>li {
+        flex: 1;
+    }
+
+    .info-list>li i {
+        display: block;
+    }
+
+    .info-list>li>img {
+        width: 30px;
+
+    }
+
+    .info-list>li>p>span {
+        display: none;
     }
 }
