--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     max-width: 1600px;
     margin: 0 auto;
     /* background: rgba(255, 0, 0, 0.2); */
+    padding: 0px 1em;
 }
 
 .ham-btn {
@@ -26,7 +27,6 @@ header {
 
 .main-logo {
     width: 300px;
-    height: 54px;
 }
 
 header .inner {
@@ -113,7 +113,7 @@ header .inner {
 
 /* ----------------------- main slider -----------------------------*/
 .main-slider-wrap {
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .main-slider-inner {
@@ -609,16 +609,10 @@ section {
     transition: 0.5s;
 }
 
-.NuriCard .NuriCard-top {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-    padding: 33px 31px 10px 40px;
-}
-
 
 .NuriCard .NuriCard-top {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 24px;
     padding: 33px 31px 10px 40px;
@@ -639,7 +633,6 @@ section {
     align-items: center;
     gap: 29px;
     padding-left: 40px;
-    padding-right: 109px;
 }
 
 .NuriCard .NuriCard-mid>p {
@@ -783,7 +776,7 @@ section {
 
 /* curator-moive-inner-wrap - 숨김처리 하는 영역*/
 .curator-moive-inner-wrap {
-    /* border: 1px solid rgba(255, 255, 255, 0.55); */
+    border: 1px solid rgba(255, 255, 255, 0.55);    
     margin: 0 72px;
     overflow: hidden;
     position: relative;
@@ -830,6 +823,7 @@ section {
     flex-direction: column;
     justify-content: space-between;
     padding: 36px 0;
+    /* width: 100%; */
 }
 
 /* 추천 리스트 아이템 - 제목 + 한줄평 묶음 영역 */
@@ -1103,8 +1097,7 @@ section {
 
 .info-list {
     display: flex;
-    justify-content: center;
-    gap: 156px;
+    justify-content: space-evenly;
     text-align: center;
     flex-wrap: wrap;
 }
@@ -1118,8 +1111,8 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 20px 36px;
-
+    /* margin: 0 20px 36px; */
+    padding: 30px 20px;
 }
 
 .footer-top .util-menu {
@@ -1128,6 +1121,7 @@ section {
     font-size: 0.875em;
     font-weight: 400;
     color: #dbdbdb;
+    flex-wrap: wrap;
 }
 
 .footer-top .util-menu>li:nth-child(3)>a {
@@ -1191,7 +1185,7 @@ strong {
     display: flex;
     align-items: center;
     gap: 12px;
-    padding: 12px 36px;
+    padding: 8px 30px;
     border: 1px solid #fff;
     border-radius: 30px;
     background: rgba(255, 255, 255, 0.1);
